【测试】添加手动触发测试链

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -1,5 +1,5 @@
-name: 🔗 GHA
-on: [push, pull_request, merge_group]
+name: 🔗 测试链
+on: [push, pull_request, merge_group, workflow_dispatch]
 
 concurrency:
   group: ci-${{ github.actor }}-${{ github.head_ref || github.run_number }}-${{ github.ref }}-runner
